ordenado de codigo

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -65,10 +65,10 @@
         <br>
         <input id="password"  type="password" placeholder="Ingrese contraseña">
         <br>
-        <div class="row">
-            <button id="login" class="botonEnviar  form-text">Login </button>
+        <div class="row" id="botones">
+            <div id="login" class="form-text"></div>
             <br>
-            <button id="signout" class="botonEnviar form-text">signout </button>
+            <div id="signout" class="form-text"> </div>
         </div>
         
     </form>
@@ -248,8 +248,9 @@
 
 <!--Script propios-->
 
-<script src="../js/my_User_Profile.js"></script>
+
 <script src="../js/carrito.js"></script>
+<script src="../js/my_User_Profile.js"></script>
 
 <!--Script de librerias-->
     <scrip src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
