--- a/pages/productos.html
+++ b/pages/productos.html
@@ -25,7 +25,7 @@
 <body>
     <header class="header__fondo-pages">
         <a name="arriba"></a>
-<div class="container row">
+<div id="" class="container row">
     <div class="container col-10">
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:transparent;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -246,17 +246,16 @@
         AOS.init();
     </script>
 
+
+<!--Script jquery-->
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
 <!--Script propios-->
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
-
 <script src="../js/carrito.js"></script>
 <script src="../js/my_User_Profile.js"></script>
 
 <!--Script de librerias-->
-  
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
