--- a/pages/productos.html
+++ b/pages/productos.html
@@ -75,10 +75,14 @@
 </div>
 </div>
 
-
     </header>
+    
+<div id="lugarSaludo">
 
+    </div>
+    
 <section id="paginappal">
+
             <section Style="margin:10px auto;">
                 <div>
                     <h1 class="main__slogan__pages">La miel más natural</h1>
@@ -259,7 +263,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
