ordenado de codigo

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -259,8 +259,8 @@ crossorigin="anonymous"></script>
 
 
 <!--Script propios-->
-<script src="../js/carrito.js"></script>
-<script src="../js/my_User_Profile.js"></script>
+<script type="module" src="../js/carrito.js"></script>
+<script type="module" src="../js/my_User_Profile.js"></script>
 
 <!--Script de librerias-->
 
