ultimas modificaciones al proyecto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -204,7 +204,9 @@
 <div id="carrito" class="container">
     <hr>
     <h2>Mi carrito</h2>
-
+    <div style="display: none;" id="alert" class="alert alert-success">
+        <strong>Muchas gracias por elegirnos!</strong> Su compra ha sido procesada correctamente
+        </div>`
 </div>
 
 </section>
